--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                             <a class="nav-link" href="./contact.html">Contact</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link disabled" href="./function.html">Display Time</a>
+                            <a class="nav-link disabled" href="./function.html">Area</a>
                         </li>
                     </ul>
                     <form class="form-inline mt-2 mt-md-0">
