--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <!-- link to my own CSS -->
     <link rel="stylesheet" href="./styles/lavanya.css">
     <link>
-    //<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
    
 </head>
 
@@ -41,6 +41,9 @@
                         </li>
                         <li class="nav-item">
                             <a class="nav-link disabled" href="./function.html">Area</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link disabled" href="./Test/qunit.html">test</a>
                         </li>
                     </ul>
                     <form class="form-inline mt-2 mt-md-0">
