--- a/function.html
+++ b/function.html
@@ -39,6 +39,9 @@
                         <li class="nav-item">
                             <a class="nav-link disabled" href="./function.html">Area</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link disabled" href="./Test/qunit.html">test</a>
+                        </li>
                     </ul>
                     <form class="form-inline mt-2 mt-md-0">
         
