--- a/function.html
+++ b/function.html
@@ -69,7 +69,7 @@
         <button id="hide">Hide</button>
         <button id="show">Show</button>
     </section>
-    <div id="hello">
+    <div id="demo">
         <h2>The ajax</h2>
         <button type="button" onclick="verification()">click to see my name</button>
         </div>  
