--- a/function.html
+++ b/function.html
@@ -70,7 +70,7 @@
         <button id="show">Show</button>
     </section>
     <div id="demo">
-        <h2>The ajax</h2>
+        <h2>.......The ajax......</h2>
         <button type="button" onclick="verification()">click to see my name</button>
         </div>  
         
