--- a/contact.html
+++ b/contact.html
@@ -6,6 +6,7 @@
         Lavanya Reddy Uppula
     </title>
     Lavanya Reddy Uppula
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <!-- Bootstrap required meta tags -->
     <meta charset="UTF8">
     <meta name="viewport" content="width=device-width, intial-scale=1, shrink-to-fit=no">
@@ -68,9 +69,33 @@
         <input type="text" id="msg" name="msg">
         <button type="button" formaction="./contact.html">Submit</button>
     </form>
+    <article>
+        <section>
+            <div id="aja">
+                <h2>AJAX Implementation</h2>
+                <button type="button" onmouseover="aj()">Change Content</button>
+                
+                </div>
+            </article>
+            <script src="./scripts/lavanya.js"></script>
+
     <footer>
         &copy;2019Lavanya Reddy Uppula
     </footer>
+    <!-- JQuery -->
+   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+   <!-- Bootstrap tooltips -->
+   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.4/umd/popper.min.js"></script>
+   <!-- Bootstrap core JavaScript -->
+   <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.2.1/js/bootstrap.min.js"></script>
+   <!-- MDB core JavaScript -->
+   <script src="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.7.3/js/mdb.min.js"></script>
+   <script src="https://code.jquery.com/qunit/qunit-2.9.1.js"
+   integrity="sha256-eNccBdxd8zReziWcVjEsPeyJDi3LKMYnzMXyDv8bzsU=" crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.bundle.min.js"
+   integrity="sha384-xrRywqdh3PHs8keKZN+8zzc5TX0GRTLCcmivcbNJWm2rs5C8PRhcEn3czEjhAO9o"
+   crossorigin="anonymous"></script>
+
 </body>
 
 </html>
