--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
       
                 <section class="col-md-5">
                   <h3>Plans</h3>
-                 // <p class="study">
+                 <p class="study">
                         After my graduation I would like to be a Network Security Engineer.
                     </p>
                 </section>
