--- a/function.html
+++ b/function.html
@@ -78,7 +78,7 @@
         &copy;2019Lavanya Reddy Uppula </footer>
     
         
-        //<!-- JQuery -->
+        <!-- JQuery -->
    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
    <!-- Bootstrap tooltips -->
    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.4/umd/popper.min.js"></script>
