commit all changes
Signed-off-by: reddylavanya <lavanya27111996@gmail.com>

--- a/function.html
+++ b/function.html
@@ -59,7 +59,7 @@
     <br> 
 <section class="time">
         <form >
-            <input id = "num1" type="number"> enter length of square<br>
+          <input id = "num1" type="number"> enter length of square<br>
             <br>
             <button type="button" onclick="myFunction()">Submit</button>
 
@@ -69,6 +69,11 @@
         <button id="hide">Hide</button>
         <button id="show">Show</button>
     </section>
+<br><br>
+
+<button id="clicker" class="btn btn-primary">Click me!</button>
+<button id="wiper" class="btn btn-danger">Clear Storage</button>
+<p id="result"></p>
 <br><br>
 
     
